--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@ main {
   border: 2px solid #aaaaaa;
   background-color: #FFF;
   border-radius: 5px;
+  overflow-y: scroll;
 
 }
 .map-container {
@@ -77,8 +78,8 @@ main {
   float: bottom;
   margin: 0.5%;
   margin-top: 1%;
+  margin: 1%;
   width: 98%;
-  max-height: 60%;
   border: 2px solid #aaaaaa;
   border-radius: 5px;
 
@@ -88,17 +89,17 @@ main {
 .card-container {
  
   display: flex;
-  flex-wrap: nowrap;
+  flex-flow: row nowrap;
   overflow-x: scroll;
   background-color: #FFF;
   max-height: 60%;
-
 
   margin: 0;
   margin-left: 1%;
   margin-right: 1%;
   margin-bottom: 0%;
   padding: 0;
+  overflow-x: scroll;
 
 }
 
@@ -108,7 +109,6 @@ main {
   flex: 0 0 auto;
   margin: 1%;
   padding: 1%;
-  width: 25%;
   height: 90%;
   border-radius: 5px;
   border: 1px solid #ccf2f4;
@@ -184,13 +184,14 @@ main {
   max-height: 25%;
   background-color: #FFF;
   float: right;
+  border-radius: 5px;
 
 }
 
 .popup-inner .close-btn{
   position: absolute;
-  top: 16%;
-  right: 16px;
+  top: 10%;
+  right: 10%;
 
 }
 
